--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,3 +213,51 @@ body{
     text-decoration: none;
     color: #000;
 }
+.slidshow{
+    height: 335px;
+    background-color: #fff;
+    overflow: hidden;
+}
+.slidshowarea{
+    height: 335px;
+    transition:all 1s ;
+}
+.slide{
+    height: 335px;
+    float: left;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.slidinfo{
+   height: 70px; 
+   background-image: url('../images/slideshow_bg.png');
+   background-size: auto 70px;
+   margin-top: 265px;
+}
+.slideinfotitulo{
+    font-size: 15px;
+    color: #fff;
+    padding-top: 15px;
+    font-weight: bold;
+    padding-left: 20px;
+}
+.slideinfosubtitulo{
+    font-size: 13px;
+    color: #fff;
+    padding-left: 20px;
+}
+.slidebolinhas{
+    position: absolute;
+    width: 200px;
+    height: 20px;
+}
+.bolinha{
+    width: 20px;
+    height: 20px;
+    float: left;
+    margin-right: 5px;
+    cursor: pointer;
+    background-color: #ccc;
+    border-radius: 10px;
+}
