--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,7 @@ body{
     height: 335px;
     background-color: #fff;
     overflow: hidden;
+    margin-bottom: 20px;
 }
 .slidshowarea{
     height: 335px;
@@ -260,4 +261,62 @@ body{
     cursor: pointer;
     background-color: #ccc;
     border-radius: 10px;
+}
+.noticiaarea1{
+    width: 430px;
+    float: left;
+    height: 420px;
+}
+.noticiaarea2{
+    width: 310px;
+    float: right;
+    height: 420px;
+}
+.noticiaitem{
+    text-align: left;
+    height: 88px;
+    display: flex;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    border: none;
+}
+.noticiabig{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+.noticiabig .noticiaimg{
+    width: 384px;
+    height: 222px;
+}
+.noticiabig .noticiaimg img{
+    width: 384px;
+    height: 222px;
+}
+.noticiabig .noticiatitulo{
+    font-size: 30px;
+    width: 384px;
+}
+.agrupar{
+    display: flex;
+    flex-direction: column;
+}
+.noticiaimg{
+    width: 80px;
+    height: 80px;
+    border: 1px solid #ccc;
+    padding: 3px;
+    float: left;
+}
+.noticiatitulo{
+    margin-left: 5px;
+    font-size: 14px;
+    float: left;
+    width: 226px;
+}
+.noticiainfo{
+    font-size: 12px;
+    margin-left: 5px;
+    color: #999;
+    float: left;
 }
