--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,6 +248,13 @@ body{
     color: #fff;
     padding-left: 20px;
 }
+.toprigth input{
+    border-radius: 5px;
+}
+.lupa{
+    background-color: rgb(170, 15, 15);
+    padding: 2px;
+}
 .slidebolinhas{
     position: absolute;
     width: 200px;
@@ -272,10 +279,9 @@ body{
     float: right;
     height: 420px;
 }
-.noticiaitem{
+.noticiaitem2{
     text-align: left;
     height: 88px;
-    display: flex;
     margin-top: 7px;
     margin-bottom: 7px;
     border: none;
@@ -319,4 +325,162 @@ body{
     margin-left: 5px;
     color: #999;
     float: left;
+}
+.mobile{
+    display: none;
+}
+
+@media only screen and (min-width:906px) and (max-width: 1057px){
+    .topoint,
+    .topo2int, 
+    .ultimasnoticiasint, 
+    .containerint{
+        max-width: 890px;
+    }
+    #menu{
+        display: block !important;
+    }
+    .leftside{
+        width: 600px;
+    }
+    .noticiaarea1{
+        width: 278px;
+    }
+    .noticiabig .noticiaimg{
+        width: 245px;
+    }
+    .noticiabig .noticiaimg img{
+        width: 245px;
+    }
+
+    .noticiabig .noticiatitulo{
+        width: 245px;
+        font-size: 25px;
+    }
+
+}
+
+@media only screen and (min-width: 750px) and (max-width: 906px){
+    .topoint,
+    .topo2int, 
+    .ultimasnoticiasint, 
+    .containerint{
+        max-width: 758px;
+    }
+    .topo2 .banner{
+        display: none;
+    }
+    #menu{
+        display: block !important;
+    }
+    .logo{
+        float: none;
+        margin: auto;
+    }
+    .rightside{
+        display: none;
+    }
+    .leftside{
+        width: auto;
+        float: none;
+    }
+    .noticiaarea1{
+        width: 430px;
+    }
+    .noticiabig .noticiaimg{
+        width: 405px;
+    }
+    .noticiabig .noticiaimg img{
+        width: 405px;
+    }
+
+    .noticiabig .noticiatitulo{
+        width: 405px;
+        font-size: 25px;
+    }
+}
+
+@media only screen and (max-width: 750px){
+    .topoint,
+    .topo2int, 
+    .ultimasnoticiasint, 
+    .containerint{
+        max-width: 320px;
+    }
+    .topoleft{
+        display: none;
+    }
+    .toprigth{
+        width: 100%;
+    }
+    .menuint{
+        
+    }
+    .menu ul{
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        z-index: 10;
+        background-color: rgb(182, 41, 22);
+    }
+    .menugambiarra{
+        display: none;
+    }
+    .menu li{
+        float: none;
+        height: auto;
+    }
+    .submenu{
+        background-color: rgb(109, 15, 12);
+    }
+    .ultimasnoticias{
+        display: none;
+    }
+    .topo2 .banner{
+        display: none;
+    }
+    .logo{
+        float: none;
+        margin: auto;
+    }
+    .rightside{
+        display: none;
+    }
+    .leftside{
+        width: auto;
+        float: none;
+        margin-top: 10px;
+    }
+    .noticiaarea1{
+        width: 320px;
+    }
+    .noticiaarea2{
+        width: 300px;
+        margin: auto;
+        float: none;
+        clear: both;
+        height: auto;
+    }
+    .noticiaitem2{
+        clear: both;
+    }
+    .noticiatitulo{
+        width: 206px;
+    }
+    .noticiainfo{
+        width: 206px;
+    }
+    .noticiabig .noticiaimg{
+        width: 290px;
+    }
+    .noticiabig .noticiaimg img{
+        width: 290px;
+    }
+    .noticiabig .noticiatitulo{
+        width: 290px;
+        font-size: 25px;
+    }
+    .mobile{
+        display: block;
+    }
 }
